[package]
name = "pgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
getrandom = "0.2.15"
orion = "0.17.6"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
whoami = "1.5.1"
