[package]
name = "pgpt"
version = "0.1.0"
edition = "2021"
authors = ["Ammar Ahmed <ammar.ahmed2203@gmail.com>"]
license = "MIT"
repository = "https://github.com/ammar-ahmed22/pgpt"
readme = "README.md"
description = "A CLI to ask ChatGPT anything with pretty markdown rendering (Pretty GPT)"
keywords = ["cli", "gpt", "ai", "chatgpt", "markdown"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
getrandom = "0.2.15"
indicatif = "0.17.8"
orion = "0.17.6"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
termimad = "0.29.2"
whoami = "1.5.1"

[[bin]]
name = "pgpt"
path = "src/main.rs"
